--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     },
     "dependencies": {
         "commander": "^10.0.0",
+        "discord.js": "^14.9.0",
         "dotenv": "^16.0.3",
         "p-queue": "^7.3.4",
         "substreams": "^0.5.6",
