--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 - entity: Transfer
-  chat_ids:
+  channel_ids:
     - "1098279427617603636"
   message: "This **{user_id}** made a __transaction__ with id `{trx_id}`"
 
 - entity: Grants
-  chat_ids:
+  channel_ids:
     - "1098279427617603636"
   message: "This ||{grant}||"
