Using substreams-sink-socials

--- a/config.json
+++ b/config.json
@@ -1,14 +1,23 @@
 [
     {
         "entity": "Transfer",
-        "channel_ids": [
+        "type": "channel",
+        "chat_ids": [
             "1100491622422159431"
         ],
-        "message": "This **{user_id}** made a __transaction__ with id `{trx_id}`"
+        "message": "Hello channel! This **{user_id}** made a __transaction__ with id `{trx_id}`"
+    },
+    {
+        "entity": "Transfer",
+        "type": "user",
+        "chat_ids": [
+            "969082968410816632"
+        ],
+        "message": "Hello user! This **{user_id}** made a __transaction__ with id `{trx_id}`"
     },
     {
         "entity": "Grants",
-        "channel_ids": [
+        "chat_ids": [
             "1098279427617603636"
         ],
         "message": "This ||{grant}||"
