--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
         "commander": "^10.0.0",
         "discord.js": "^14.9.0",
         "dotenv": "^16.0.3",
-        "p-queue": "^7.3.4",
         "substreams": "^0.5.6",
         "substreams-sink": "^0.2.0",
+        "substreams-sink-socials": "file:../substreams-sink-socials",
         "winston": "^3.8.2",
         "yaml": "^2.2.2",
         "zod": "^3.21.4"
