--- a/config.json
+++ b/config.json
@@ -2,8 +2,9 @@
     {
         "entity": "Transfer",
         "type": "channel",
+        "tts": true,
         "chat_ids": [
-            "1100491622422159431"
+            "1098279427617603636"
         ],
         "message": "Hello channel! This **{user_id}** made a __transaction__ with id `{trx_id}`"
     },
