Update pkg script

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@ node_modules
 Cargo.lock
 target
 *.js
-*-linux
-*-macos
-*-win.exe
+*-linux-x64
+*-macos-arm64
+*-macos-x64
+*-win-x64.exe
 dist
 *.log
 data
