--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "substreams-sink-discord",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "description": "Substreams discord sink module",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -36,7 +36,7 @@
     "scripts": {
         "prepublishOnly": "tsc",
         "build": "tsup index.ts bin/cli.ts --dts",
-        "pkg": "ncc build bin/cli.ts -o build && pkg --target linux-x64,mac-x64,win-x64,mac-arm64 --output substreams-sink-discord build/index.js"
+        "pkg": "ncc build bin/cli.ts -o build && pkg --target linux-x64,mac-x64,win-x64 --output substreams-sink-discord build/index.js"
     },
     "dependencies": {
         "commander": "latest",
