Added embed message support

--- a/examples/config.json
+++ b/examples/config.json
@@ -17,10 +17,14 @@
         "message": "Hello user! This **{user_id}** made a __transaction__ with id `{trx_id}`"
     },
     {
-        "entity": "Grants",
+        "entity": "Grant",
         "chat_ids": [
             "1098279427617603636"
         ],
-        "message": "This ||{grant}||"
+        "message": "This ||{grant}||",
+        "embed": {
+            "title": "Embed message title {user_id}",
+            "description": "Embed message description {user_id}"
+        }
     }
 ]
