--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,18 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
     "target": "ESNext",
+    "outDir": "dist",
+    "module": "ESNext",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
-    "moduleResolution": "nodenext"
-  }
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "verbatimModuleSyntax": true,
+  },
+  "include": [
+    "index.ts",
+    "src/**/*",
+    "bin/**/*",
+  ]
 }
